--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
 
 .main {
   margin-top: 80px;
+  text-align: center;
 }
 
 .video,
@@ -39,12 +40,13 @@ body {
 }
 
 .form {
+  text-align: center;
   padding: 20px;
   border: 5px solid #2727d9;
+  margin-left: 30px;
 }
 
 .form-header {
-  text-align: center;
   font-size: 20px;
   font-weight: 900;
   margin-bottom: 40px;
@@ -52,8 +54,20 @@ body {
 
 .form input {
   width: 300px;
-  padding: 7px;
+  padding: 20px;
   border: 1px solid #333;
   font-size: 18px;
+  margin-top: 10px;
+  display: block;
+}
+
+.form button {
+  font-size: 18px;
+  font-weight: 900;
+  color: #fff;
+  background-color: #2727d9;
+  border: none;
+  width: 300px;
+  height: 59px;
   margin-top: 10px;
 }
