--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,27 @@ body {
   height: 59px;
   margin-top: 10px;
 }
+
+.features {
+  margin-top: 10px;
+  white-space: nowrap;
+}
+
+.col {
+  display: inline-block;
+  text-align: center;
+  width: 25%;
+}
+
+.features-header {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+
+img {
+  width: 80px;
+  margin-bottom: 20px;
+}
