--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   display: block;
 }
 
-.form button {
+.btn {
   font-size: 18px;
   font-weight: 900;
   color: #fff;
@@ -94,4 +94,9 @@ body {
 img {
   width: 80px;
   margin-bottom: 20px;
+}
+
+.features-button {
+  text-align: center;
+  margin-top: 40px;
 }
